[package]
edition = "2021"
name = "stm32g0-disco-rs"
version = "0.1.0"
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]

[dependencies]
panic-semihosting = "0.5.3"
cortex-m-rt = "0.6.15"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.stm32g0xx-hal]
default-features = false
features = ["stm32g031", "rt"]
version = "0.1.2"

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true
