[package]
edition = "2021"
name = "stm32g0-disco-rs"
version = "0.1.0"
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]

[dependencies]
cortex-m-rt = "0.6.15" # can't upgrade higher until g0xx-hal catches up
stm32g0xx-hal = { version = "0.1.2", features = ["stm32g031", "rt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true
