[package]
edition = "2021"
name = "stm32g0-disco-rs"
version = "0.1.0"
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]

[dependencies]
stm32g0xx-hal = { version = "0.2", features = ["stm32g031", "rt"] }
cortex-m-rt = "0.7.4"
panic-halt = "0.2.0"
rtt-target = "0.5.0"

[profile.release]
debug = true # "true" is ok, symbols reside on the host, not the target
codegen-units = 1
incremental = false
lto = true
